--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -31,3 +31,19 @@ dependencies {
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
 }
+
+appengine {
+    appengine.tools.cloudSdkHome="/Users/matheus/Downloads/google-cloud-sdk"
+    deploy {
+
+        project = findProperty("appengine.deploy.project")
+        version = findProperty("appengine.deploy.version")
+        def promoteProp = findProperty("appengine.deploy.promote")
+        if (promoteProp != null) {
+            promote = new Boolean(promoteProp)
+        }
+    }
+}
+endpointsServer {
+    hostname = "${project}.appspot.com"
+}
