--- a/jokelibrary/src/main/AndroidManifest.xml
+++ b/jokelibrary/src/main/AndroidManifest.xml
@@ -1,2 +1,12 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.msf.jokelibrary" />
+    package="com.msf.jokelibrary">
+
+    <application>
+        <activity
+            android:name=".JokeTextActivity"
+            android:label="@string/joketextactivity_title"
+            android:theme="@style/AppTheme.NoActionBar"/>
+    </application>
+
+</manifest>
