--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,5 +70,6 @@ dependencies {
     androidTestImplementation("com.android.support.test.espresso:espresso-core:${espresso}", {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    implementation "com.android.support.test.espresso:espresso-idling-resource:${espresso}"
 
 }
