--- a/build.gradle
+++ b/build.gradle
@@ -20,3 +20,22 @@ allprojects {
         google()
     }
 }
+
+task startServer {
+    description "Starting server"
+    shouldRunAfter tasks.getByPath(":backend:appengineStop")
+    dependsOn = [tasks.getByPath(':backend:appengineStart')]
+}
+
+task testApp{
+    dependsOn = [startServer,':app:test',':app:deviceCheck', ':app:connectedAndroidTest' ]
+}
+
+task afterTest{
+    mustRunAfter testApp
+    dependsOn tasks.getByPath(':backend:appengineStop')
+}
+
+task doItAll(description:"Start server, test app and put down server"){
+    dependsOn testApp
+}
